--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -6,15 +6,16 @@
  */
 
 .heroBanner {
-  padding: 4rem 0;
+  padding: 1rem 0;
   text-align: center;
   position: relative;
   overflow: hidden;
+  color: white;
 }
 
 @media screen and (max-width: 966px) {
   .heroBanner {
-    padding: 2rem;
+    padding: 1rem;
   }
 }
 
@@ -27,11 +28,12 @@
 .features {
   display: flex;
   align-items: center;
-  padding: 2rem 0;
+  text-align: center;
+  padding: 4rem 0;
   width: 100%;
 }
 
 .featureImage {
   height: 200px;
-  width: 200px;
+  width: 400px;
 }
